--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1,4 +1,15 @@
 
+@article{rineiski2011reactivity,
+  title={Reactivity Coefficients in BN-600 Core with Minor Actinides},
+  author={Rineiski, Andrei and Ishikawa, Makoto and Jang, Jinwook and Mohanakrishnan, Prabhakaran and Newton, Tim and Rimpault, Gerald and Stanculescu, Alexander and Stogov, Victor},
+  journal={Journal of nuclear science and technology},
+  volume={48},
+  number={4},
+  pages={635--645},
+  year={2011},
+  publisher={Taylor \& Francis}
+}
+
 @article{coinclp,
   author = {John Forrest and others},
   title = {{COIN-OR Linear Programing (CLP) Solver}},
