--- a/summary.tex
+++ b/summary.tex
@@ -121,7 +121,8 @@ pair as well as constraint coefficient effects.
 
 \begin{table}[h!]
 \centering
-\caption{A mapping between reactor types and the commodities allowed to fuel each reactor type.}
+\caption{A mapping between reactor types and the commodities allowed to fuel 
+  each reactor type.}
 \label{tbl:rx_to_commods}
 \begin{tabular}{|c|c|}
 \hline
@@ -230,7 +231,31 @@ of conditions. Cyclopts leverages an HTCondor-aware High Throughput Computing
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Results and Analysis}
+
+
 Results
+
+\begin{figure*}
+  \begin{center}
+    \includegraphics[width=2\columnwidth]{base_back_n_rxtr_time_fc1_solvergreedy.pdf}
+    \caption[]{
+      \label{fig:greedy_size}
+      Results for the size scoping study for the greedy heuristic.
+      }
+  \end{center}
+\end{figure*}
+
+a
+
+\begin{figure*}
+  \begin{center}
+    \includegraphics[width=2\columnwidth]{1k_avg_front_time_fc1_solvercbc.pdf}
+    \caption[]{
+      \label{fig:cbc_size}
+      Results for the size stochastic study for the CBC Solver.
+      }
+  \end{center}
+\end{figure*}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Conclusions}
