--- a/summary.tex
+++ b/summary.tex
@@ -34,20 +34,6 @@ timing of facility types and deciding how material transfers should be executed
 at a given time step. Accordingly, tradeoffs exist between the features provided
 by a simulator and the performance of the simulator.
 
-Historically, the most popular methodology used to model nuclear fuel cycles has
-been system dynamics \cite{moisseytsev_dymond_2001, durpel_daness_2003,
-  yacout_vision_2006, busquim_e_silva_system_2008}. In general, system dyanmics
-has been found to be difficult to use when modeling complex, physics-dependent
-supply chains. Attempts at modeling different fuel cycles have required altering
-the underlying simulation engine \cite{guerin_impact_2009}. It is typically
-difficult to add \textit{in situ} decision making, i.e., allowing a simulator to
-make deployment or routing decisions dynamically, given its current
-state. DANESS is the only simulator that claims any such capability in the
-current literature \cite{van_den_durpel_daness_2009}. Finally, modeling regional
-and institutional effects, i.e., allowing modeled relationships bewteen
-management entities to determine material flow and deployment decisions, is a
-feature absent from most simulators. 
-
 The \Cyclus{} FCS \cite{cyclus2014} was designed to more easily model a variety
 of fuel cycles. It uses an agent-based modeling paradigm in order to encapsulate
 the difficulty of designing new agent archetypes. Archetypes define
@@ -60,12 +46,12 @@ trades to be executed between agents. Coupling the DRE with the \Cyclus{}
 Region-Institution-Facility hierarchy model as well as the
 archetype-prototype-agent model, highly dynamic, easily adjustable fuel cycles
 can be modeled, addressing many of the issues developers and users have found
-with system-dynamics-based models. However, \Cyclus{} must both be featureful
-and performant. This paper provides a first-look at how the DRE model, also
-called the Nuclear Fuel Cycle Transportation Problem (NFCTP), scales with
-problem size by generating and solving a large number of exchanges. Different
-solvers are analyzed including a \Cyclus{}-aware greedy heuristic in addition to
-COIN-OR's LP and MILP solvers \cite{coinclp, coincbc}.
+with previous models. However, \Cyclus{} must both be featureful and
+performant. This paper provides a first-look at how the DRE model, also called
+the Nuclear Fuel Cycle Transportation Problem (NFCTP), scales with problem size
+by generating and solving a large number of exchanges. Different solvers are
+analyzed including a \Cyclus{}-aware greedy heuristic in addition to COIN-OR's
+LP and MILP solvers \cite{coinclp, coincbc}.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Methodology}
@@ -89,7 +75,7 @@ Uranium Oxide (UOX), Mixed Plutonium Oxide for Thermal Reactors (TMOX), Mixed
 Plutonium Oxide for Fast Reactors (FMOX), Thorium Oxide for Fast Reactors
 (FThOX).
 
-\begin{table}[h!]
+\begin{table}[]
 \centering
 \caption{A mapping between fuel cycles to the commodities that exist in each one.}
 \label{tbl:fc_to_commods}
@@ -119,7 +105,7 @@ acceptable commodities is provided in Table \ref{tbl:rx_to_commods}. Note that
 there is still a preference distribution associated with each reactor-commodity
 pair as well as constraint coefficient effects.
 
-\begin{table}[h!]
+\begin{table}[]
 \centering
 \caption{A mapping between reactor types and the commodities allowed to fuel 
   each reactor type.}
@@ -171,7 +157,7 @@ what degree location is used in determining preference coefficients. Because
 each parameter deals with a notion of simulation \textit{fidelity}, they are
 denoted as $f_{x}$ and summarized in Table \ref{tbl:global_params}.
 
-\begin{table}[h!]
+\begin{table}[]
 \centering
 \caption{Parameter Description Summary for Species-Independent Parameters.}
 \label{tbl:global_params}
@@ -196,6 +182,17 @@ None, Coarse, Fine
 \end{tabularx}
 \end{table}
 
+\begin{figure*}
+  \begin{center}
+    \includegraphics[width=2\columnwidth]{exchange_xlation_timing.pdf}
+    \caption[]{
+      \label{fig:dre_time}
+      The control flow of the DRE execution and time points for comparing 
+      different solutions. The DRE workflow is described more fully in 
+      \cite{gidden_agent-based_2013, gidden_agent-based_2014}. }
+  \end{center}
+\end{figure*}
+
 Given a set of parameters, an exchange instance is generated and persisted in a
 database. The generated exchange exists in the \textit{exchange layer} of the
 DRE, as shown in Figure \ref{fig:dre_time}. Because the greedy heuristic is
@@ -207,17 +204,6 @@ thus must take the second solver pathway, through the formulation layer. Figure
 to compare solution times between solvers and different exchange instances,
 i.e., for each solver and exchange instance, execution time is measured as $t_f
 - t_i$.
-
-\begin{figure*}
-  \begin{center}
-    \includegraphics[width=2\columnwidth]{exchange_xlation_timing.pdf}
-    \caption[]{
-      \label{fig:dre_time}
-      The control flow of the DRE execution and time points for comparing 
-      different solutions. The DRE workflow is described more fully in 
-      \cite{gidden_agent-based_2013, gidden_agent-based_2014}. }
-  \end{center}
-\end{figure*}
 
 In order to explore the large number of possible exchange instances, a
 sophisticated instance generation and solving framework is needed. Accordingly,
@@ -232,12 +218,31 @@ of conditions. Cyclopts leverages an HTCondor-aware High Throughput Computing
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Results and Analysis}
 
+An experiment consists of a set of resource-exchange graph instances executed
+with a collection of configured solvers. When a solution is found, the solution
+(i.e., the flow vector), the time required to reach the solution, and the
+objective value (i.e., the dot-product of cost and flow vectors) are
+recorded. Six execution nodes on UW-Madison Advanced Computing Initiative (ACI)
+HTCondor system form the homogeneous environment used to conduct the experiments
+herein described. Each execute node is comprised of an 2.90 GHz eight-core,
+sixteen-thread, Intel Xeon E5-2690 processor with 128 GB of RAM. Processor
+hyper-threading was disabled for the duration of the experimental campaign to
+allow comparisons between solution times.
 
-Results
+Initially, a scalability campaign was launched to study how the solvers perform
+as the size of exchange increases. All parameters for generating an exchange are
+a function of the number of reactors in the exchange, thus the number of
+reactors in the system is the natural choice for a scaling parameter. The number
+of reactors in the system was scaled from ten to five hundred. For each reactor
+population value, exchanges were generated for all possible combinations of
+fundamental parameter values ($18$ total). Further, each generated exchange
+instance was solved with all three available solvers. Figure
+\ref{fig:greedy_size} provides an example of output from the scalability
+campaign.
 
 \begin{figure*}
   \begin{center}
-    \includegraphics[width=2\columnwidth]{base_back_n_rxtr_time_fc1_solvergreedy.pdf}
+    \includegraphics[width=1.5\columnwidth]{base_back_n_rxtr_time_fc1_solvergreedy.pdf}
     \caption[]{
       \label{fig:greedy_size}
       Results for the size scoping study for the greedy heuristic.
@@ -245,13 +250,20 @@ Results
   \end{center}
 \end{figure*}
 
-a
+Every exchange instance depends on both objective value coefficients and
+constraint coefficients, both of which are products of stochastic
+processes. Accordingly, an experimental campaign was launched to study the
+effects of stochasticity on the solution times and relative solution values
+between solvers. Similar to the scalability campaign, all possible combinations
+of fundamental parameter values were investigated; $1,000$ were generated as a
+base line case study for each combination. Figure \ref{fig:cbc_stochastic}
+provides an example of output from the stochastic campaign.
 
 \begin{figure*}
   \begin{center}
-    \includegraphics[width=2\columnwidth]{1k_avg_front_time_fc1_solvercbc.pdf}
+    \includegraphics[width=1.5\columnwidth]{1k_avg_front_time_fc1_solvercbc.pdf}
     \caption[]{
-      \label{fig:cbc_size}
+      \label{fig:cbc_stochastic}
       Results for the size stochastic study for the CBC Solver.
       }
   \end{center}
@@ -259,11 +271,23 @@ a
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Conclusions}
+
+
 Conclusions
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Acknowledgments}
-Acks
+
+This research is being performed using funding received from the DOE
+Office of Nuclear Energy's Nuclear Energy University Programs.  The
+authors thank the NEUP for its generous support.
+
+\begin{center}
+\includegraphics[width=.25\columnwidth]{neup_logo_large.jpg}
+\end{center}
+
+The authors would also like to thank Dr. Anthony M. Scopatz, whose advice in the
+development of Cyclopts has proved invaluable.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \bibliographystyle{ans}
