--- a/summary.tex
+++ b/summary.tex
@@ -250,8 +250,9 @@ campaign.
     \includegraphics[width=1.5\columnwidth]{base_back_n_rxtr_time_fc1_solvergreedy.pdf}
     \caption[]{
       \label{fig:greedy_size}
-      Results for the size scoping study for the greedy heuristic.
-      }
+      Results for the size scoping study for the greedy heuristic modeling a
+      back-end MOX fuel cycle. Rows have increasing \frx values and columns have
+      increasing \floc values.}
   \end{center}
 \end{figure*}
 
@@ -282,8 +283,9 @@ the stochastic campaign.
     \includegraphics[width=1.5\columnwidth]{1k_avg_front_time_fc1_solvercbc.pdf}
     \caption[]{
       \label{fig:cbc_stochastic}
-      Results for the size stochastic study for the CBC Solver.
-      }
+      Results for the size stochastic study for the CBC Solver modeling a
+      front-end MOX fuel cycle with $65$ reactors. Rows have increasing \frx
+      values and columns have increasing \floc values.  }
   \end{center}
 \end{figure*}
 
