--- a/summary.tex
+++ b/summary.tex
@@ -304,17 +304,17 @@ for both species of exchanges and all combinations of fundamental parameters.
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Conclusions}
 
-A first-of-a-kind analysis of the dynamic solution of suppy and demand in a
+A first-of-a-kind analysis of the dynamic solution of supply and demand in a
 nuclear fuel cycle is presented. A large number of exchanges are generated and
 solved with a \Cyclus-aware greedy heuristic, the CLP solver, and the CBC
-solver. The greedy heuristic is shown to scale well even for very large problem
+solver. The greedy heuristic is shown to scale well for very large problem
 sizes, even when modeling up to $500$ reactors (on the order of the current
 world-wide reactor population) trading individual assemblies. The CLP solver
 also performs well at large problem scales. The CBC solver, while achieving the
 true optimal solution in many cases, performs sporadically. Such a result is not
-surprising, especially for highly-constrained optimizaiton problems. Its use,
+surprising, especially for highly-constrained optimization problems. Its use,
 therefore, is suggested for initial exploratory studies before embarking on
-full-fledged analytical campaigns. Most users will likely find the greedy
+full-fledged analytic campaigns. Most users will likely find the greedy
 heuristic to be acceptable, as it provides a feasible solution and enables the
 powerful features of the DRE.
 
